package lcServerConfig;

message Config {
	required string secretEnrollmentToken = 1;
	required EnrollmentRules enrollmentRules = 2;
	required ModuleRules moduleRules = 3;
	required ProfileRules profileRules = 4;

	required EndpointUrl primary = 5;
	required EndpointUrl secondary = 6;
	required string c2PublicKeyFile = 7;
	required string rootPublicKeyFile = 8;
	required string rootPrivateKeyFile = 9;

}

message EnrollmentRules {
	repeated EnrollmentRule rule = 1;
}

message ModuleRules {
	repeated ModuleRule rule = 1;
}

message ProfileRules {
	repeated ProfileRule rule = 1;
}

message EnrollmentRule {
	required string oid = 1;
	required string iid = 2;
}

message ModuleRule {
	required string aid = 1;
	required int32 moduleId = 2;
	required string moduleFile = 3;
}

message ProfileRule {
	required string aid = 1;
	required string profileFile = 2;
}

message EndpointUrl {
	required string url = 1;
	required int32 port = 2;
}
